<resources>
    <string name="app_name">Awsencryptapp</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="email">Email</string>
    <string name="aws_s3_upload_files">Welcome to AWS</string>
    <string name="choose_file">Choose File</string>
    <string name="file_name">file name</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
</resources>
