<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".AWSUpload">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00963232"
        android:text="@string/aws_s3_upload_files"

        android:textSize="20sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/choose_file"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:layout_weight="0.9"
            android:text="@string/choose_file" />

        <EditText
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/file_name"
            android:layout_marginTop="40dp"
            android:layout_weight="2"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">

        <Button
            android:id="@+id/btn_upload"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"

            android:text="@string/upload"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_download"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/download"
            android:textAllCaps="false" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="File Name" />

    <ImageView
        android:id="@+id/img_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"/>
</LinearLayout>


